<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/practical"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:id="@+id/card1"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="20dp"
        app:cardCornerRadius="15dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:id="@+id/img"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/alarm_animation"
                android:contentDescription="@string/alarm_animation"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/alarm_text"
                app:layout_constraintTop_toBottomOf="@id/img"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/alarm_time"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text1"
                android:text="@string/text1"
                app:layout_constraintTop_toBottomOf="@id/alarm_text"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="18sp"
                android:layout_marginStart="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text2"
                android:text="@string/text2"
                app:layout_constraintTop_toBottomOf="@id/text1"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="16sp"
                android:layout_marginStart="10dp"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/img2"
                android:scaleType="centerCrop"
                android:background="@drawable/heart_animation"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text2"
                android:contentDescription="@string/heart_animation"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn1"
                android:layout_marginStart="10dp"
                android:layout_marginTop="33dp"
                android:text="@string/alarm_create"
                app:icon="@drawable/alarm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text2"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm_cancel"
                app:icon="@drawable/cancel"
                app:layout_constraintBaseline_toBaselineOf="@id/btn1"
                app:layout_constraintStart_toEndOf="@id/btn1"
                app:layout_constraintEnd_toEndOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>

